# caches-for-search

./: .gitignore  CMakeLists.txt  README.rst  frequency_histogram.h  generate_main.py  lfu_cache.cpp  lfu_cache.h  main.cpp  pure_lfu_histogram.cpp  pure_lfu_histogram.h  types.h  util.cpp  util.h
doc/: mem_sizes.py  plots.py  zipf_plot.py
doc/cikm2018/: body.tex  main.aux  main.out  main.tex  sample-bibliography.bib
doc/cikm2018/auto/: body.el  main.el
doc/sigir/: .huge-table.tex.swp  body.tex  huge-table.tex  main.aux  main.bbl  main.blg  main.out  main.tex  sample-bibliography.bib
include/: doubly_linked_list.h  fnv1a.h  frequency_histogram.h  greedy_dual_size_pr_cache.h  hitrate_evaluation.h  lfu_cache.h  murmur3.h  pure_lfu_histogram.h  spectral_bloom_filter.h  strawman_histogram.h  tiny_lfu_histogram.h  top_retriever.h  util.h
include/cache/: NodeDoublyLinkedList.h  cache.h  greedy_dual_size_k_cache.h  lfu_cache.h  lru_cache.h  node_doubly_linked_list.h  random_cache.h
include/frequency-histogram/: frequency_histogram.h  pure_lfu_histogram.h  strawman_histogram.h  tiny_lfu_histogram.h  window_lfu_histogram.h
include/hash/: fnv1a.h  murmur3.h
include/policy/admission/: admission_policy.h  frequency_admission.h
include/policy/eviction/: eviction_policy.h  gdsfk.h  inmemory_gdsfk.h  inmemory_lfu_eviction.h  lfu_eviction.h  lru_eviction.h
include/policy/replacement/: admission_controlled_replacement_policy.h  admission_replacement_policy.h  only_eviction_replacement_policy.h  replacement_policy.h  static_dynamic_replacement_policy.h
src/: .main.cpp.swp  hitrate_evaluation.cpp  lfu_cache.cpp  lfu_cache.h  main.cpp  util.cpp
src/cache/: NodeDoublyLinkedList.cpp  greedy_dual_size_k_cache.cpp  lfu_cache.cpp  lru_cache.cpp  node_doubly_linked_list.cpp  random_cache.cpp
src/frequency-histogram/: pure_lfu_histogram.cpp  pure_lfu_histogram.h  spectral_bloom_filter.h  tiny_lfu_histogram.h  window_lfu_histogram.cpp  wlfu_histogram.cpp  wlfu_histogram.h
src/hash/: fnv1a.cpp  murmur3.c
src/policy/eviction/: gdsfk.cpp  inmemory_gdsfk.cpp  inmemory_lfu_eviction.cpp  lfu_eviction.cpp  lru_eviction.cpp
src/policy/replacement/: admission_controlled_replacement_policy.cpp  admission_replacement_policy.cpp  only_eviction_replacement_policy.cpp  static_dynamic_replacement_policy.cpp
